grammar.js
    source_file: $ => seq(
      optional($.concerto_version),
      optional($.decorators),
      $.namespace_declaration,
      optional($.import_list),
      optional($.declaration_list),
    ),

    // ========================================================================
    // Concerto Version Statement
    // ========================================================================
    concerto_version: $ => seq(
      "concerto",
      "version",
      $.string_literal,
    ),

    // ========================================================================
    // Namespace
    // ========================================================================
    namespace_declaration: $ => seq(
      "namespace",
      $.namespace_path,
    ),

    // A namespace path like: org.accordproject.finance@1.0.0
    // We use a single token to avoid ambiguity with decorators' @
    namespace_path: $ => /[a-zA-Z_$][a-zA-Z0-9_$]*(\.[a-zA-Z_$][a-zA-Z0-9_$]*)*(@[0-9]+\.[0-9x]+(\.[0-9x]+)?(-[a-zA-Z0-9._-]+)?(\+[a-zA-Z0-9._-]+)?)?/,

    // ========================================================================
    // Imports
    // ========================================================================
    declaration_list: $ => repeat1($._declaration),

    _declaration: $ => choice(
      $.concept_declaration,
      $.asset_declaration,
      $.participant_declaration,
      $.transaction_declaration,
      $.event_declaration,
      $.enum_declaration,
      $.scalar_declaration,
      $.map_declaration,
    ),

    // ========================================================================
    // Concept Declaration
    // ========================================================================
    concept_declaration: $ => seq(
      optional($.decorators),
      optional("abstract"),
      "concept",
      field("name", $.type_identifier),
      optional($._identifier_declaration),
      optional($.extends_clause),
      $.class_body,
    ),

    // ========================================================================
    // Asset Declaration
    // ========================================================================
    asset_declaration: $ => seq(
      optional($.decorators),
      optional("abstract"),
      "asset",
      field("name", $.type_identifier),
      optional($._identifier_declaration),
      optional($.extends_clause),
      $.class_body,
    ),

    // ========================================================================
    // Participant Declaration
    // ========================================================================
    participant_declaration: $ => seq(
      optional($.decorators),
      optional("abstract"),
      "participant",
      field("name", $.type_identifier),
      optional($._identifier_declaration),
      optional($.extends_clause),
      $.class_body,
    ),

    // ========================================================================
    // Transaction Declaration
    // ========================================================================
    transaction_declaration: $ => seq(
      optional($.decorators),
      optional("abstract"),
      "transaction",
      field("name", $.type_identifier),
      optional($._identifier_declaration),
      optional($.extends_clause),
      $.class_body,
    ),

    // ========================================================================
    // Event Declaration
    // ========================================================================
    event_declaration: $ => seq(
      optional($.decorators),
      optional("abstract"),
      "event",
      field("name", $.type_identifier),
      optional($._identifier_declaration),
      optional($.extends_clause),
      $.class_body,
    ),

    // ========================================================================
    // Enum Declaration
    // ========================================================================
    enum_declaration: $ => seq(
      optional($.decorators),
      "enum",
      field("name", $.type_identifier),
      $.enum_body,
    ),

    enum_body: $ => seq(
      "{",
      repeat($.enum_property),
      "}",
    ),

    enum_property: $ => seq(
      optional($.decorators),
      "o",
      field("name", $.identifier),
    ),

    // ========================================================================
    // Scalar Declaration
    // ========================================================================
    class_body: $ => seq(
      "{",
      repeat($._field_declaration),
      "}",
    ),

    extends_clause: $ => seq(
      "extends",
      $.type_identifier,
    ),

    _identifier_declaration: $ => choice(
      $.identified_by,
      $.identified,
    ),

    identified_by: $ => seq(
      "identified",
      "by",
      field("field", $.identifier),
    ),

    identified: $ => "identified",

    // ========================================================================
    // Field / Property Declarations
    // ========================================================================
    _field_declaration: $ => choice(
      $.string_field,
      $.boolean_field,
      $.datetime_field,
      $.integer_field,
      $.long_field,
      $.double_field,
      $.object_field,
      $.relationship_field,
    ),

    string_field: $ => seq(
      optional($.decorators),
      "o",
      "String",
      optional($.array_indicator),
      field("name", $.identifier),
      optional($.string_default),
      optional($.regex_validator),
      optional($.length_validator),
      optional("optional"),
    ),

    boolean_field: $ => seq(
      optional($.decorators),
      "o",
      "Boolean",
      optional($.array_indicator),
      field("name", $.identifier),
      optional($.boolean_default),
      optional("optional"),
    ),

    datetime_field: $ => seq(
      optional($.decorators),
      "o",
      "DateTime",
      optional($.array_indicator),
      field("name", $.identifier),
      optional($.string_default),
      optional("optional"),
    ),

    integer_field: $ => seq(
      optional($.decorators),
      "o",
      "Integer",
      optional($.array_indicator),
      field("name", $.identifier),
      optional($.integer_default),
      optional($.range_validator),
      optional("optional"),
    ),

    long_field: $ => seq(
      optional($.decorators),
      "o",
      "Long",
      optional($.array_indicator),
      field("name", $.identifier),
      optional($.integer_default),
      optional($.range_validator),
      optional("optional"),
    ),

    double_field: $ => seq(
      optional($.decorators),
      "o",
      "Double",
      optional($.array_indicator),
      field("name", $.identifier),
      optional($.real_default),
      optional($.range_validator),
      optional("optional"),
    ),

    object_field: $ => seq(
      optional($.decorators),
      "o",
      field("type", $.type_identifier),
      optional($.array_indicator),
      field("name", $.identifier),
      optional($.string_default),
      optional("optional"),
    ),

    relationship_field: $ => seq(
      optional($.decorators),
      "-->",
      field("type", $.type_identifier),
      optional($.array_indicator),
      field("name", $.identifier),
      optional("optional"),
    ),

    array_indicator: $ => "[]",

    // ========================================================================
    // Defaults
    // ========================================================================
    range_validator: $ => seq(
      "range",
      "=",
      "[",
      optional(field("lower", $.signed_real)),
      ",",
      optional(field("upper", $.signed_real)),
      "]",
    ),

    // ========================================================================
    // Decorators
    // ========================================================================
    decorators: $ => repeat1($.decorator),

    decorator: $ => seq(
      "@",
      field("name", $.identifier),
      optional($.decorator_arguments),
    ),

    decorator_arguments: $ => seq(
      "(",
      optional($.decorator_arg_list),
      ")",
    ),

    decorator_arg_list: $ => seq(
      $._decorator_literal,
      repeat(seq(",", $._decorator_literal)),
    ),

    _decorator_literal: $ => choice(
      $.decorator_string,
      $.decorator_number,
      $.decorator_boolean,
      $.decorator_identifier_ref,
    ),

    decorator_string: $ => $.string_literal,

    decorator_number: $ => $.signed_number,

    decorator_boolean: $ => $.boolean_literal,

    decorator_identifier_ref: $ => seq(
      $.type_identifier,
      optional($.array_indicator),
    ),

    // ========================================================================
    // Identifiers
    // ========================================================================
    type_identifier: $ => alias($._identifier_token, $.identifier),

    _identifier_token: $ => /[a-zA-Z_$][a-zA-Z0-9_$]*/,

    identifier: $ => $._identifier_token,

    // ========================================================================
    // Literals
    // ========================================================================
    string_literal: $ => choice(
      seq('"', optional($.string_content_double), '"'),
      seq("'", optional($.string_content_single), "'"),
    ),

    string_content_double: $ => repeat1(choice(
      /[^"\\]+/,
      $.escape_sequence,
    )),

    string_content_single: $ => repeat1(choice(
      /[^'\\]+/,
      $.escape_sequence,
    )),

    boolean_literal: $ => choice("true", "false"),

    signed_real: $ => /[+-]?[0-9]+(\.[0-9]*)?([eE][+-]?[0-9]+)?/,

    signed_number: $ => /[+-]?[0-9]+(\.[0-9]*)?([eE][+-]?[0-9]+)?/,

    line_comment: $ => token(seq(
      "//",
      /[^\n]*/,
    )),

    block_comment: $ => token(seq(
      "/*",
      /[^*]*\*+([^/*][^*]*\*+)*/,
      "/",
    )),
  },
});
